# Deklarative-Programmierung-Aufgaben

./: .gitignore  Balckjac_Aufgabe1.hs  Binarytree.hs  CHANGELOG.md  Deklarative-Programmierung-Aufgaben.cabal  Listfunctions.hs  Woche4_Aufgabe3_Python  searchtree.hs  week2_blackjack.hs
Week6/: Weihnachtsmannaufgabe
deklprog-project/src/: Main.hs  Pretty.hs  Rename.hs  SLD.hs  Subst.hs  Unification.hs  Vars.hs
week10/: Aufgabe 1 Teil 2  horesman.pl  mobile.pl
week3/: json.hs  polymorphicTrees.hs  tests.hs
week4/: intSet.hs  rose.hs
week5/: AvalancheExercise  GoldenRatio  GoldenRatio.hs  allcombinations.hs
week6/: diamond.hs  hangman.hs  listComprehensions.hs
week7/: Aufgabe 1  Aufgabe 1 b  Aufgabe 1.hs  Aufgabe2
week8/: Aufgabe1.pl  Aufgabe2.pl  Aufgabe3.pl
week9/: SLD-Trees  Unifikation  lists.pl
